<resources>
    <string name="app_name">Group02_MAD22_Spring_AppProject</string>
    <string name="app_name2" translatable="false">Get Fat</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_bar_hint">Search for your favourite meal!</string>
    <string name="categories">"Categories"</string>
    <string name="menu" translatable="false">"Menu"</string>
    <string name="menu_bon_apetit" translatable="false">"Bon Apetit!"</string>
    <string name="get_fat" translatable="false">"Get Fat"</string>
    <string name="main_button_exit" translatable="false">Exit</string>
    <string name="main_button_search">Search</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="search_your_recipes">Search Your Recipes…</string>

    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading" translatable="false">...</string>
    <string name="md_menu">Menu Overview</string>
    <string name="md_map">Map</string>
    <string name="md_fav">Favorites</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube" translatable="false">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="suggestion">"Are you craving for "</string>


    <string name="Login" translatable="false">Login_btn</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="Register_btn">Create Account</string>
    <string name="main_button_back">BACK</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="map">MAP</string>
    <string name="login_and_see">Login and see your favorite meals!</string>
    <string name="new_here">New Here ?  Create Account</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="create_and_eat">Create a free account and get eating!</string>
    <string name="by_agreeing_part_1">By registering you agree to Get Fats</string>
    <string name="by_agreeing_part_2">Terms and Services and Privacy Policy</string>
    <string name="search_button">SEARCH FOR RECIPES</string>
    <string name="detailed_button_guide">Need visual guidance or a way to find the nearest supermarket? We got your back! Just press the button and we will take care of the rest!</string>
    <string name="McD_fake" translatable="false">Try McD recepies</string>
    <string name="try_mc_fake">Try a McD recepie!</string>
    <string name="add_fake">Add your own recipe!</string>


</resources>