<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <!-- TODO android:icon="@drawable/ic_map"-->
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_person_pin_circle_24"
            app:iconTint="@color/white"
            android:title="@string/md_map"
           />
        <item android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_filled_star"
            android:iconTint="@color/white"
            android:title="@string/md_fav" />

        <item android:title="Coming soon"
            android:enabled="false">
<menu>
    <item
        android:id="@+id/nav_fake"

        android:enabled="false"
        android:icon="@drawable/ic_add_food"
        android:title="@string/add_fake"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/nav_fake_promo"
        android:icon="@drawable/maccie"
        android:title="@string/McD_fake"></item>
</menu>
        </item>
    </group>

</menu>