<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/dark_background"
    tools:context=".activities.detailsactivity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/dot_loading">
            <ImageView
                android:id="@+id/mealThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:background="@drawable/ic_baseline_crop_square_24"
                android:src="@drawable/shadow_bottom_to_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_small_10"
                android:paddingTop="@dimen/padding_small_10"
                android:paddingRight="@dimen/padding_small_10">

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="@dimen/padding_small_10"
                    android:src="@drawable/ic_outline_star"
                    app:tint="@color/colorWhiteDark"
                    tools:ignore="NewApi" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/dark_background"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/padding_medium_14"
                            android:paddingTop="@dimen/padding_medium_14"
                            android:paddingRight="@dimen/padding_medium_14"
                            android:text="@string/category"
                            android:textColor="@color/dark_light_header"
                            android:textSize="@dimen/text_medium_16" />

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/padding_medium_14"
                            android:paddingTop="5dp"
                            android:paddingRight="@dimen/padding_medium_14"
                            android:paddingBottom="@dimen/padding_medium_14"
                            android:text="@string/dot_loading"
                            android:textColor="@color/light_undertitle_text"
                            android:textSize="@dimen/text_medium_16" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/dark_background"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:paddingLeft="@dimen/padding_medium_14"
                            android:paddingTop="@dimen/padding_medium_14"
                            android:paddingRight="@dimen/padding_medium_14"
                            android:text="@string/country"
                            android:textColor="@color/dark_light_header"
                            android:textSize="@dimen/text_medium_16" />

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:paddingLeft="@dimen/padding_medium_14"
                            android:paddingTop="5dp"
                            android:paddingRight="@dimen/padding_medium_14"
                            android:paddingBottom="@dimen/padding_medium_14"
                            android:text="@string/dot_loading"
                            android:textColor="@color/light_undertitle_text"
                            android:textSize="@dimen/text_medium_16" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium_14"
                android:paddingLeft="@dimen/padding_medium_14"
                android:paddingRight="@dimen/padding_medium_14"
                android:text="@string/Ingredients"
                android:textColor="@color/light_undertitle_text"
                android:textSize="@dimen/text_big_18"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small_10"
                android:layout_marginRight="@dimen/padding_small_10"
                app:cardBackgroundColor="@color/cardBoxBlack"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_giant_40"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/ingredient"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:paddingLeft="@dimen/padding_medium_14"
                                android:paddingRight="@dimen/padding_medium_14"
                                android:textColor="@color/colorWhiteDark"
                                android:textSize="@dimen/text_medium_16" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/measure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:paddingLeft="@dimen/padding_medium_14"
                                android:paddingRight="@dimen/padding_medium_14"
                                android:textColor="@color/colorWhiteDark"
                                android:textSize="@dimen/text_medium_16" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium_14"
                android:layout_marginTop="@dimen/padding_medium_14"
                android:layout_marginRight="@dimen/padding_medium_14"

                android:layout_marginBottom="5dp"
                android:drawablePadding="@dimen/padding_small_10"
                android:gravity="center_vertical"
                android:text="@string/instructions"
                android:textColor="@color/light_undertitle_text"
                android:textSize="@dimen/text_big_18"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small_10"
                android:layout_marginRight="@dimen/padding_small_10"
                app:cardBackgroundColor="@color/cardBoxBlack"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_medium_14"

                    android:paddingTop="@dimen/padding_medium_14"
                    android:paddingRight="@dimen/padding_medium_14"
                    android:paddingBottom="@dimen/padding_medium_14"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorWhiteDark"
                    android:textSize="@dimen/text_medium_16" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small_10"
                android:layout_marginBottom="@dimen/padding_big_20"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_giant_40">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small_10"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/dark_light_header"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/padding_small_10"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/padding_medium_14"
                        android:text="@string/youtube"
                        android:textColor="@color/colorWhiteDark"
                        android:textSize="@dimen/text_medium_16"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_small_10"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/light_undertitle_text"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:cardElevation="0dp"

                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="@dimen/padding_small_10"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/padding_medium_14"
                        android:text="@string/map"
                        android:textColor="@color/colorWhiteDark"
                        android:textSize="@dimen/text_medium_16"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>